# Recommendation_System_MLflow

./: Main.py  README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/: Automative_5_core.csv  Automotive_5_core.csv  README.md
deploy/: deploy_models.py  deploy_restAPI.py  save_model.py
mlflow/: log_experiments.py
model/: model.py
models/: data_loader.py  evaluator.py  recommender.py
streamlit_app/: app.py
